--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Sample</string>
+
+    <string name="content_image">Content image</string>
+    <string name="profile_image">Profile image</string>
+
 </resources>
